--- a/linhnguyen-ver2/w3.css
+++ b/linhnguyen-ver2/w3.css
@@ -230,25 +230,25 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
-.w3-theme-l5 {color:#000 !important; background-color:#eff1f6 !important}
-.w3-theme-l4 {color:#000 !important; background-color:#cbd2e1 !important}
-.w3-theme-l3 {color:#fff !important; background-color:#97a5c3 !important}
-.w3-theme-l2 {color:#fff !important; background-color:#6477a6 !important}
-.w3-theme-l1 {color:#fff !important; background-color:#435275 !important}
-.w3-theme-d1 {color:#fff !important; background-color:#22293a !important}
-.w3-theme-d2 {color:#fff !important; background-color:#1e2434 !important}
-.w3-theme-d3 {color:#fff !important; background-color:#1a202d !important}
-.w3-theme-d4 {color:#fff !important; background-color:#161b27 !important}
-.w3-theme-d5 {color:#fff !important; background-color:#131720 !important}
+.w3-theme-l5 {color:#000 !important; background-color:#fffdfc !important}
+.w3-theme-l4 {color:#000 !important; background-color:#fff9f5 !important}
+.w3-theme-l3 {color:#000 !important; background-color:#fff3eb !important}
+.w3-theme-l2 {color:#000 !important; background-color:#feece1 !important}
+.w3-theme-l1 {color:#000 !important; background-color:#fee6d7 !important}
+.w3-theme-d1 {color:#000 !important; background-color:#fdc4a0 !important}
+.w3-theme-d2 {color:#000 !important; background-color:#fca873 !important}
+.w3-theme-d3 {color:#000 !important; background-color:#fb8c46 !important}
+.w3-theme-d4 {color:#fff !important; background-color:#fa6f19 !important}
+.w3-theme-d5 {color:#fff !important; background-color:#e15905 !important}
 
-.w3-theme-light {color:#000 !important; background-color:#eff1f6 !important}
-.w3-theme-dark {color:#fff !important; background-color:#131720 !important}
-.w3-theme-action {color:#fff !important; background-color:#131720 !important}
+.w3-theme-light {color:#000 !important; background-color:#fffdfc !important}
+.w3-theme-dark {color:#fff !important; background-color:#e15905 !important}
+.w3-theme-action {color:#fff !important; background-color:#e15905 !important}
 
-.w3-theme {color:#fff !important; background-color:#252d40 !important}
-.w3-text-theme {color:#252d40 !important}
-.w3-border-theme {border-color:#252d40 !important}
+.w3-theme {color:#000 !important; background-color:#fedfcc !important}
+.w3-text-theme {color:#fedfcc !important}
+.w3-border-theme {border-color:#fedfcc !important}
 
-.w3-hover-theme:hover {color:#fff !important; background-color:#252d40 !important}
-.w3-hover-text-theme:hover {color:#252d40 !important}
-.w3-hover-border-theme:hover {border-color:#252d40 !important}
+.w3-hover-theme:hover {color:#000 !important; background-color:#fedfcc !important}
+.w3-hover-text-theme:hover {color:#e15905 !important}
+.w3-hover-border-theme:hover {border-color:#fedfcc !important}
