--- a/linhnguyen-ver2/w3.css
+++ b/linhnguyen-ver2/w3.css
@@ -252,4 +252,5 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-hover-theme:hover {color:#000 !important; background-color:#fedfcc !important}
 .w3-hover-theme2:hover {color:#000 !important; background-color:#69e5af !important}
 .w3-hover-text-theme:hover {color:white !important}
+.w3-hover-text-theme2:hover {color:#69e5af !important}
 .w3-hover-border-theme:hover {border-color:#fedfcc !important}
