--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -173,6 +173,10 @@ body {
 .project-section {
   height: 100%;
   width: 100%;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .about-wrapper {
   height: 100%;
@@ -186,16 +190,19 @@ body {
   text-justify: justify;
   flex-direction: column;
   text-align: left;
+ 
+  
   
 }
 
 .about-main h2 {
   font-weight: 900;
-  font-size: 7em;
+  padding-top: 64px;
+  font-size: 6em;
   margin-bottom: 0;
   letter-spacing: 5px;
   text-shadow: 2px 2px 2px #69e5af;
-  border-bottom: 0.5px solid black;
+  text-align: left;
 }
 
 .about-main p {
@@ -215,47 +222,67 @@ body {
   flex-direction: column;
 }*/
 
-.projects_item_scrollable {
-  height: 80vh; 
+.projects_items {
+  height: 100vh;
   overflow-y: scroll;
+  margin-top: 6em;
+}
+
+.projects_item_scrollable {
+  height: 80%;
+  
 }
 
 .projects_item_self {
-  display: flex;
+  /*display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-wrap: wrap;*/
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 100%;
+  
+
 }
 .project_box {
-  border: 0.5px solid black;
   border-radius: 0.5rem;
-  margin-top: 1.5rem;
+  margin-bottom: 1.25rem;
   color: black;
-  width: 41em;
+  width: 45em;
   height: 41em;
   text-align: center;
-  
-  
+  border: 0.5px solid black;
   /*display: flex;
   flex-direction: column;*/
   cursor: default;
 }
 
+.img-proj {
+  width: 80%;
+  height: auto;
+}
 #proj_box_title {
   font-size: 2.5rem;
-  font-weight: 900;
+  padding-top: 1.65rem!important;
+  
 }
 
+.hoverbox-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .hover_box {
   border: 0.2px solid black;
   margin: 1rem;
   width: 10em;
   transition: 0.5s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  text-decoration: none;
   align-items: center;
   text-align: center;
+}
+
+.hover_box a {
+  text-decoration: none;
 }
 
 #hover_box:hover {
