--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -106,7 +106,6 @@ body {
   margin-bottom: 0;
   letter-spacing: 7px;
   text-shadow: 4px 2px 0px #fc4445;
-  
 }
 
 .home-main h3 {
@@ -268,6 +267,7 @@ body {
   height: 100%;
   /*margin-top: 6em;*/
   width: 100%;
+
 }
 
 .projects_item_scrollable {
@@ -277,9 +277,9 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+
 }
 .project_box {
-  border-radius: 0.5rem;
   margin-bottom: 1.25rem;
   color: black;
   text-align: center;
@@ -287,34 +287,53 @@ body {
   cursor: default;
   height: 100%;
   width: 50%;
+  position: relative;
 }
 
 .img-proj {
-  width: 20%;
+  width: 70%;
   height: auto;
 }
 #proj_box_title {
-  font-size: 2.5rem;
-  padding-top: 1.65rem !important;
+  font-size: 3rem;
+  padding-top: 1.85em !important;
+  font-weight: 900;
+  letter-spacing: 5px;
+  text-shadow: 4px 2px 0px white;
 }
 
 .hoverbox-section {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  align-self: center;
+  margin-top: auto;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+
 }
 .hover_box {
-  border: 0.2px solid black;
+  border: 1px solid black;
   margin: 1rem;
   width: 10em;
   transition: 0.5s ease;
   text-decoration: none;
   align-items: center;
   text-align: center;
+  -webkit-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 1);
 }
 
 .hover_box a {
   text-decoration: none;
+  font-weight: 900;
+  transition: 0.5s ease;
 }
 
 #hover_box:hover {
@@ -323,6 +342,12 @@ body {
   animation-duration: 500ms;
   animation-fill-mode: forwards;
   color: black;
+}
+
+.proj_desc {
+  margin-left: 6em;
+  margin-right: 6em;
+  letter-spacing: 3px;
 }
 
 /*@media only screen and (max-width: 768px){
