--- a/linhnguyen-ver2/w3.css
+++ b/linhnguyen-ver2/w3.css
@@ -232,11 +232,12 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 
 
-.w3-theme-l5 {color:#000 !important; background-color:#fffdfc !important}
-.w3-theme-l4 {color:#000 !important; background-color:#fff9f5 !important}
-.w3-theme-l3 {color:#000 !important; background-color:#fff3eb !important}
-.w3-theme-l2 {color:#000 !important; background-color:#feece1 !important}
-.w3-theme-l1 {color:#000 !important; background-color:#fee6d7 !important}
+.w3-theme-l5 {color:#000 !important; background-color:#01abfe !important}
+.w3-theme-l4 {color:#000 !important; background-color:#f9d4d3 !important}
+.w3-theme-l3 {color:#000 !important; background-color:#0131ff !important}
+.w3-theme-l2 {color:#000 !important; background-color:
+    #2096f3 !important}
+.w3-theme-l1 {color:#000 !important; background-color:#3feee6 !important}
 .w3-theme-d1 {color:#000 !important; background-color:#fdc4a0 !important}
 .w3-theme-d2 {color:#000 !important; background-color:#fca873 !important}
 .w3-theme-d3 {color:#000 !important; background-color:#fb8c46 !important}
@@ -253,7 +254,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-theme {border-color:#fedfcc !important}
 
 .w3-hover-theme:hover {color:#000 !important; background-color:#fedfcc !important}
-.w3-hover-theme2:hover {color:#000 !important; background-color:#69e5af !important}
+.w3-hover-theme2:hover {color:#000 !important; text-decoration: underline !important;}
 .w3-hover-text-theme:hover {color:white !important}
 .w3-hover-text-theme2:hover {color:#3feee6 !important}
 .w3-hover-text-theme3:hover {color:#fc4445 !important}
