--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -182,6 +182,7 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  scroll-behavior: smooth;
 }
 
 .arrow {
@@ -235,19 +236,23 @@ body {
   width: 90%;
 }
 
-/*.about-main h2 {
+.about-main h2 {
   font-weight: 900;
-  padding-top: 64px;
-  font-size: 6em;
+  font-size: 5em;
   margin-bottom: 0;
   letter-spacing: 5px;
-  text-shadow: 2px 2px 2px #69e5af;
+  text-shadow: 2px 2px 2px #3feee6;
   text-align: left;
-}*/
+  
+}
 
 .about-main p {
   font-size: 1.5em;
   letter-spacing: 5px;
+}
+
+#About, #Projects {
+  scroll-behavior: smooth;
 }
 
 /*.projects {
@@ -267,9 +272,10 @@ body {
   height: 100%;
   /*margin-top: 6em;*/
   width: 100%;
-
 }
-
+.layout {
+  scroll-behavior: smooth;
+}
 .projects_item_scrollable {
   height: 100vh;
   width: 100vw;
