--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -22,10 +22,6 @@ body {
   width: 100%;
   justify-content: center;
   text-align: center;
-  /*border-bottom: 0.5px solid black;*/
-  /*box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);*/
-  /*background-color: #FC4445;*/
-  /*background-color: #97CAEF;*/
   text-decoration: none;
 }
 
@@ -89,7 +85,7 @@ body {
 
 .home-main {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -183,6 +179,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 .arrow {
@@ -243,7 +240,6 @@ body {
   letter-spacing: 5px;
   text-shadow: 2px 2px 2px #3feee6;
   text-align: left;
-  
 }
 
 .about-main p {
@@ -251,7 +247,8 @@ body {
   letter-spacing: 5px;
 }
 
-#About, #Projects {
+#About,
+#Projects {
   scroll-behavior: smooth;
 }
 
@@ -279,11 +276,9 @@ body {
 .projects_item_scrollable {
   height: 100vh;
   width: 100vw;
-  background-color: #f9d4d3;
   display: flex;
   flex-direction: row;
   justify-content: center;
-
 }
 .project_box {
   margin-bottom: 1.25rem;
@@ -321,7 +316,6 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0 auto;
-
 }
 .hover_box {
   border: 1px solid black;
@@ -356,14 +350,88 @@ body {
   letter-spacing: 3px;
 }
 
-
-/*@media only screen and (max-width: 768px){
-  .about-section {
+@media only screen and (max-width: 768px) {
+  .header {
     display: flex;
     flex-direction: column;
+    padding: 0 !important;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+  }
+  .header div {
+    align-items: flex-start;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    box-shadow: none;
+  }
+  .nav {
+    box-shadow: none;
+    margin-bottom: 0.75em;
+    background-color: black;
   }
 
-  .about-wrapper {
-    height: 100vh;
+  .nav__link {
+    color: white;
+  
   }
-}*/
+
+  .home-main {
+    height: 110vh;
+    width: 100%;
+  }
+
+  .home-main h1 {
+    font-size: 8em;
+  }
+
+  .home-main h3 {
+    font-size: 3em;
+  }
+
+  .about-section {
+    height: 170%;
+  }
+
+  .about-main {
+    text-align: center;
+  }
+
+  .about-main h2 {
+    text-align: center;
+  }
+
+  .about-main p {
+
+    font-size: 1.15em;
+
+  }
+
+  .projects_item_scrollable {
+    flex-direction: column !important;
+    height: 100%;
+    width: 100%;
+  }
+
+  .project_box {
+    height: 100vh;
+    width: 100vw;
+    margin-bottom: 0;
+  }
+
+  #proj_box_title {
+    font-size: 2.25rem !important;
+    
+  }
+  .proj_desc {
+    margin-left: 3em;
+    margin-right: 3em;
+  }
+
+  .resume_section {
+    margin-top: 3em !important;
+    top: 100px !important;
+
+  }
+}
