--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -30,8 +30,9 @@ body {
   justify-content: space-evenly;
 }
 
-.skills {
+.skills:hover {
   color: #3feee6;
+  transition: 0.5s ease;
 }
 
 /*.footer {
@@ -392,7 +393,7 @@ body {
   }
 
   .home-main h1 {
-    font-size: 8em;
+    font-size: 7.5em;
   }
 
   .home-main h3 {
@@ -400,7 +401,7 @@ body {
   }
 
   .about-section {
-    height: 170%;
+    height: 190%;
   }
 
   .about-main {
@@ -409,12 +410,17 @@ body {
 
   .about-main h2 {
     text-align: center;
+    margin-top: 1.4em;
   }
 
   .about-main p {
 
     font-size: 1.15em;
 
+  }
+
+  .skills_icon {
+    margin-bottom: 2em;
   }
 
   .projects_item_scrollable {
