--- a/linhnguyen-ver2/custom.css
+++ b/linhnguyen-ver2/custom.css
@@ -30,9 +30,9 @@ body {
   justify-content: space-evenly;
 }
 
-.skills:hover {
-  color: #3feee6;
-  transition: 0.5s ease;
+.skills {
+  /*color: #3feee6;*/
+  transition: 0.4s ease;
 }
 
 /*.footer {
