--- a/linhnguyen-ver2/styles/custom.css
+++ b/linhnguyen-ver2/styles/custom.css
@@ -35,16 +35,19 @@ body {
   transition: 0.4s ease;
 }
 
-/*.footer {
+.footer {
   width: 100%;
-  height: 50px;
-  position: fixed;
-  bottom: 0;
-  z-index: 1;
-  padding: 2em;
+  height: 45px;
   border-top: 0.5px solid black;
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
-}*/
+  background-color: black;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+}
+
+.footer strong {
+  float: left;
+}
 
 .header div {
   display: block;
