--- a/linhnguyen-ver2/styles/custom.css
+++ b/linhnguyen-ver2/styles/custom.css
@@ -35,6 +35,14 @@ body {
   transition: 0.4s ease;
 }
 
+#myVid {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 .footer {
   width: 100%;
   height: 45px;
@@ -107,6 +115,8 @@ body {
   cursor: default;
   align-items: center;
   background-color: #3feee6;
+  /* position: fixed;
+  bottom: 0; */
 }
 
 .home-main h1 {
@@ -387,7 +397,6 @@ body {
 
   .nav__link {
     color: white;
-  
   }
 
   .home-main {
@@ -417,9 +426,7 @@ body {
   }
 
   .about-main p {
-
     font-size: 1.15em;
-
   }
 
   .skills_icon {
@@ -440,7 +447,6 @@ body {
 
   #proj_box_title {
     font-size: 2.25rem !important;
-    
   }
   .proj_desc {
     margin-left: 3em;
@@ -450,7 +456,6 @@ body {
   .resume_section {
     margin-top: 3em !important;
     top: 100px !important;
-
   }
 
   .hoverbox-section {
