--- a/linhnguyen-ver2/styles/custom.css
+++ b/linhnguyen-ver2/styles/custom.css
@@ -35,14 +35,6 @@ body {
   transition: 0.4s ease;
 }
 
-#myVid {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
-
 .footer {
   width: 100%;
   height: 45px;
@@ -288,6 +280,33 @@ body {
   flex-direction: column;
 }*/
 
+.orchid-page-wrapper {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
+
+.orchids-wrapper {
+  position: fixed;
+}
+
+.orchids-wrapper h2 {
+  font-weight: 900;
+  font-size: 10em;
+  margin-bottom: 0;
+  letter-spacing: 7px;
+  text-shadow: 4px 2px 0px white;
+  text-align: center;
+}
+
+#myVid {
+  min-width: 100%;
+  max-height: 100%;
+
+  
+}
+
 .projects_items {
   height: 100%;
   /*margin-top: 6em;*/
@@ -460,5 +479,12 @@ body {
 
   .hoverbox-section {
     padding: 0 !important;
+  }
+
+  #myVid {
+   min-width: 80%;
+  }
+  .orchids-wrapper h2 {
+    font-size: 4em;
   }
 }
